--- a/index.html
+++ b/index.html
@@ -14,60 +14,63 @@
     <div class="wrapper">
         <header class="header"
             style="background: url(./assets/images/header/background.jpg) no-repeat center center / cover;">
-            <div class="header__inner _container">
+            <div class="header__inner">
                 <div class="header__top">
-                    <div class="header-menu" id="header-menu">
-                        <span></span>
-                        <span></span>
-                        <span></span>
-                    </div>
-                    <div class="header-logo">
-                        <a class="header-logo__link" href="/"><img class="header-logo__img"
-                                src="./assets/images/logo.png" alt="header__logo"></a>
-                    </div>
-                    <nav class="header-nav">
-                        <ul class="header-nav__list">
-                            <li class="header-nav__item">
-                                <a href="/" class="header-nav__link">О приложении</a>
-                            </li>
-                            <li class="header-nav__item">
-                                <a href="/" class="header-nav__link">Продукты</a>
-                            </li>
-                            <li class="header-nav__item">
-                                <a href="/" class="header-nav__link">Команда</a>
-                            </li>
-                            <li class="header-nav__item">
-                                <a href="/" class="header-nav__link">Контакты</a>
-                            </li>
-                        </ul>
-                    </nav>
-                    <div class="header-language">
-                        <div class="header-language__popup">
-                            РУ
-                            <div class="header-language__arrow"></div>
+                    <div class="header__top-wrapper _container">
+                        <div class="header-menu" id="header-menu">
+                            <span></span>
+                            <span></span>
+                            <span></span>
                         </div>
-                        <div class="header-language__menu menu-language" id="menu-language">
-                            <ul class="menu-language__list">
-                                <li class="menu-language__item">
-                                    <a href="/" class="menu-language__link">
-                                        Русский
-                                    </a>
+                        <div class="header-logo">
+                            <a class="header-logo__link" href="/"><img class="header-logo__img"
+                                    src="./assets/images/logo.png" alt="header__logo"></a>
+                        </div>
+                        <nav class="header-nav">
+                            <ul class="header-nav__list">
+                                <li class="header-nav__item">
+                                    <a href="/" class="header-nav__link">О приложении</a>
                                 </li>
-                                <li class="menu-language__item">
-                                    <a href="/" class="menu-language__link">
-                                        Английский
-                                    </a>
+                                <li class="header-nav__item">
+                                    <a href="/" class="header-nav__link">Продукты</a>
                                 </li>
-                                <li class="menu-language__item">
-                                    <a href="/" class="menu-language__link">
-                                        Китайский
-                                    </a>
+                                <li class="header-nav__item">
+                                    <a href="/" class="header-nav__link">Команда</a>
+                                </li>
+                                <li class="header-nav__item">
+                                    <a href="/" class="header-nav__link">Контакты</a>
                                 </li>
                             </ul>
+                        </nav>
+                        <div class="header-language">
+                            <div class="header-language__popup">
+                                <span class="header-language__text">РУ</span>
+                                <div class="header-language__arrow"></div>
+                            </div>
+                            <div class="header-language__menu menu-language" id="menu-language">
+                                <ul class="menu-language__list">
+                                    <li class="menu-language__item">
+                                        <a href="/" class="menu-language__link">
+                                            Русский
+                                        </a>
+                                    </li>
+                                    <li class="menu-language__item">
+                                        <a href="/" class="menu-language__link">
+                                            Английский
+                                        </a>
+                                    </li>
+                                    <li class="menu-language__item">
+                                        <a href="/" class="menu-language__link">
+                                            Китайский
+                                        </a>
+                                    </li>
+                                </ul>
+                            </div>
                         </div>
                     </div>
+
                 </div>
-                <div class="header__bottom">
+                <div class="header__bottom _container">
                     <div class="header__left">
                         <div class="header__heading">
                             <h1 class="header__title">Услуги и товары рядом</h1>
@@ -83,6 +86,10 @@
                         </div>
                     </div>
                     <div class="header__phone phone-header">
+                        <img src="./assets/images/header/mark1.png" alt="mark" class="phone-header__mark">
+                        <img src="./assets/images/header/mark2.png" alt="mark" class="phone-header__mark">
+                        <img src="./assets/images/header/mark3.png" alt="mark" class="phone-header__mark">
+                        <img src="./assets/images/header/mark4.png" alt="mark" class="phone-header__mark">
                         <img class="phone-header__img" src="./assets/images/header/mobile.png" alt="header__mobile">
                     </div>
                 </div>
@@ -366,7 +373,7 @@
                         </div>
                         <div class="footer-language">
                             <div class="footer-language__popup">
-                                РУ
+                                <span class="footer-language__text">РУ</span>
                                 <div class="footer-language__arrow"></div>
                             </div>
                             <div class="footer-language__menu footer-language" id="footer-menu">
