--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                                     <a href="/" class="header-nav__link">Продукты</a>
                                 </li>
                                 <li class="header-nav__item">
-                                    <a href="/team" class="header-nav__link">Команда</a>
+                                    <a href="./team" class="header-nav__link">Команда</a>
                                 </li>
                                 <li class="header-nav__item">
                                     <a href="/" class="header-nav__link">Контакты</a>
