--- a/team.html
+++ b/team.html
@@ -15,7 +15,11 @@
             overflow: visible;
             position: relative;
         }
-
+        .header__inner{
+            position: fixed;
+            width: 100%;
+            z-index: 999999;
+        }
         .header__top {
             position: static;
         }
