fixed header gradient

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                                     <a href="/" class="header-nav__link">Продукты</a>
                                 </li>
                                 <li class="header-nav__item">
-                                    <a href="./team" class="header-nav__link">Команда</a>
+                                    <a href="./team.html" class="header-nav__link">Команда</a>
                                 </li>
                                 <li class="header-nav__item">
                                     <a href="/" class="header-nav__link">Контакты</a>
@@ -90,7 +90,9 @@
                         <img src="./assets/images/header/mark2.png" alt="mark" class="phone-header__mark">
                         <img src="./assets/images/header/mark3.png" alt="mark" class="phone-header__mark">
                         <img src="./assets/images/header/mark4.png" alt="mark" class="phone-header__mark">
-                        <img class="phone-header__img" src="./assets/images/header/mobile.png" alt="header__mobile">
+                        <div class="phone__wrapper">
+                            <img class="phone-header__img" src="./assets/images/header/mobile.png" alt="header__mobile">
+                        </div>
                     </div>
                 </div>
             </div>
@@ -242,7 +244,8 @@
                         </h2>
                     </div>
                     <div class="subscribe__notification subscribe-notification">
-                        <img class="subscribe-notification__icon" src="./assets/images/subscribe/bell.png" alt="notification__icon">
+                        <img class="subscribe-notification__icon" src="./assets/images/subscribe/bell.png"
+                            alt="notification__icon">
                         <p class="subscribe-notification__text">Первые 100.000 пользователей получат годовую подписку на
                             Pingwin.plus бесплатно</p>
                     </div>
