some fixes and popup

--- a/index.html
+++ b/index.html
@@ -161,21 +161,72 @@
                                 <div class="top-how__buy">
                                     <span class="top-how__title">Покупка</span>
                                     <ul class="top-how__list">
-                                        <li class="top-how__item">
+                                        <li class="top-how__item how__item">
                                             <img src="./assets/images/how/1.png" alt="how__image"
                                                 class="top-how__image">
                                             <p class="top-how__text">Поиск услуги или товара</p>
                                         </li>
-                                        <li class="top-how__item">
+                                        <div class="top-how__popup" data-popup-1>
+                                            <div class="top-how__phone-popup">
+                                                <div class="phone-close">
+                                                    <span class="phone-close__text">Закрыть</span>
+                                                    <div class="phone-close__button">
+                                                        <div class="phone-close__line"></div>
+                                                        <div class="phone-close__line"></div>
+                                                    </div>
+                                                </div>
+                                                <div class="phone-lines">
+                                                    <div class="phone-lines__circle"></div>
+                                                    <div class="phone-lines__line"></div>
+                                                </div>
+                                                <img class="phone-popup__image" src="./assets/images/how/1.1.png" alt="popup__image">
+                                                <span class="phone__title">Поиск услуги или товара</span>
+                                            </div>
+                                        </div>
+                                        <li class="top-how__item how__item">
                                             <img src="./assets/images/how/2.png" alt="how__image"
                                                 class="top-how__image">
                                             <p class="top-how__text">Выбор подходящего объявления</p>
                                         </li>
-                                        <li class="top-how__item">
+                                        <div class="top-how__popup" data-popup-2>
+                                            <div class="top-how__phone-popup">
+                                                <div class="phone-close">
+                                                    <span class="phone-close__text">Закрыть</span>
+                                                    <div class="phone-close__button">
+                                                        <div class="phone-close__line"></div>
+                                                        <div class="phone-close__line"></div>
+                                                    </div>
+                                                </div>
+                                                <div class="phone-lines">
+                                                    <div class="phone-lines__circle"></div>
+                                                    <div class="phone-lines__line"></div>
+                                                </div>
+                                                <img class="phone-popup__image" src="./assets/images/how/2.1.png" alt="popup__image">
+                                                <span class="phone__title">Выбор подходящего объявления</span>
+                                            </div>
+                                        </div>
+                                        <li class="top-how__item how__item">
                                             <img src="./assets/images/how/3.png" alt="how__image"
                                                 class="top-how__image">
                                             <p class="top-how__text">Связь со специалистом или продавцом</p>
                                         </li>
+                                        <div class="top-how__popup" data-popup-3>
+                                            <div class="top-how__phone-popup">
+                                                <div class="phone-close">
+                                                    <span class="phone-close__text">Закрыть</span>
+                                                    <div class="phone-close__button">
+                                                        <div class="phone-close__line"></div>
+                                                        <div class="phone-close__line"></div>
+                                                    </div>
+                                                </div>
+                                                <div class="phone-lines">
+                                                    <div class="phone-lines__circle"></div>
+                                                    <div class="phone-lines__line"></div>
+                                                </div>
+                                                <img class="phone-popup__image" src="./assets/images/how/3.1.png" alt="popup__image">
+                                                <span class="phone__title">Связь со специалистом или продавцом</span>
+                                            </div>
+                                        </div>
                                     </ul>
                                 </div>
                                 <div class="top-how__phone">
@@ -184,21 +235,72 @@
                                 <div class="top-how__sell">
                                     <span class="top-how__title">Продажа</span>
                                     <ul class="top-how__list">
-                                        <li class="top-how__item">
+                                        <li class="top-how__item how__item">
                                             <img src="./assets/images/how/4.png" alt="how__image"
                                                 class="top-how__image">
                                             <p class="top-how__text">Описание услуги или товара</p>
                                         </li>
-                                        <li class="top-how__item">
+                                        <div class="top-how__popup" data-popup-4>
+                                            <div class="top-how__phone-popup">
+                                                <div class="phone-close">
+                                                    <span class="phone-close__text">Закрыть</span>
+                                                    <div class="phone-close__button">
+                                                        <div class="phone-close__line"></div>
+                                                        <div class="phone-close__line"></div>
+                                                    </div>
+                                                </div>
+                                                <div class="phone-lines">
+                                                    <div class="phone-lines__circle"></div>
+                                                    <div class="phone-lines__line"></div>
+                                                </div>
+                                                <img class="phone-popup__image" src="./assets/images/how/4.1.png" alt="popup__image">
+                                                <span class="phone__title">Поиск услуги или товара</span>
+                                            </div>
+                                        </div>
+                                        <li class="top-how__item how__item">
                                             <img src="./assets/images/how/5.png" alt="how__image"
                                                 class="top-how__image">
                                             <p class="top-how__text">Добавление на карту</p>
                                         </li>
-                                        <li class="top-how__item">
+                                        <div class="top-how__popup" data-popup-5>
+                                            <div class="top-how__phone-popup">
+                                                <div class="phone-close">
+                                                    <span class="phone-close__text">Закрыть</span>
+                                                    <div class="phone-close__button">
+                                                        <div class="phone-close__line"></div>
+                                                        <div class="phone-close__line"></div>
+                                                    </div>
+                                                </div>
+                                                <div class="phone-lines">
+                                                    <div class="phone-lines__circle"></div>
+                                                    <div class="phone-lines__line"></div>
+                                                </div>
+                                                <img class="phone-popup__image" src="./assets/images/how/5.1.png" alt="popup__image">
+                                                <span class="phone__title">Поиск услуги или товара</span>
+                                            </div>
+                                        </div>
+                                        <li class="top-how__item how__item">
                                             <img src="./assets/images/how/6.png" alt="how__image"
                                                 class="top-how__image">
                                             <p class="top-how__text">Ответ на запрос о покупке</p>
                                         </li>
+                                        <div class="top-how__popup" data-popup-6>
+                                            <div class="top-how__phone-popup">
+                                                <div class="phone-close">
+                                                    <span class="phone-close__text">Закрыть</span>
+                                                    <div class="phone-close__button">
+                                                        <div class="phone-close__line"></div>
+                                                        <div class="phone-close__line"></div>
+                                                    </div>
+                                                </div>
+                                                <div class="phone-lines">
+                                                    <div class="phone-lines__circle"></div>
+                                                    <div class="phone-lines__line"></div>
+                                                </div>
+                                                <img class="phone-popup__image" src="./assets/images/how/6.1.png" alt="popup__image">
+                                                <span class="phone__title">Ответ на запрос о покупке</span>
+                                            </div>
+                                        </div>
                                     </ul>
                                 </div>
                             </div>
@@ -207,10 +309,27 @@
                                     <div class="bottom-how__wrapper">
                                         <span class="bottom-how__title">Совершение сделки</span>
                                     </div>
-                                    <li class="bottom-how__item">
+                                    <li class="bottom-how__item how__item">
                                         <img src="./assets/images/how/7.png" alt="how__image" class="bottom-how__image">
                                         <p class="bottom-how__text">Система рейтинга и отзывов</p>
                                     </li>
+                                    <div class="top-how__popup" data-popup-7>
+                                        <div class="top-how__phone-popup">
+                                            <div class="phone-close">
+                                                <span class="phone-close__text">Закрыть</span>
+                                                <div class="phone-close__button">
+                                                    <div class="phone-close__line"></div>
+                                                    <div class="phone-close__line"></div>
+                                                </div>
+                                            </div>
+                                            <div class="phone-lines">
+                                                <div class="phone-lines__circle"></div>
+                                                <div class="phone-lines__line"></div>
+                                            </div>
+                                            <img class="phone-popup__image" src="./assets/images/how/7.1.png" alt="popup__image">
+                                            <span class="phone__title">Система рейтинга и отзывов</span>
+                                        </div>
+                                    </div>
                                     <li class="bottom-how__item">
                                         <ul class="bottom-how__social social-how">
                                             <li class="social-how__item"><a class="social-how__link" href="/"><img
@@ -303,42 +422,42 @@
                         <ul class="partners__list">
                             <li class="partners__item">
                                 <a href="/" class="partners__link">
-                                    <img src="./assets/images/partners/1.png" alt="partners__logo">
+                                    <img src="./assets/images/partners/1.png" class="partners__logo" alt="partners__logo">
                                 </a>
                             </li>
                             <li class="partners__item">
                                 <a href="/" class="partners__link">
-                                    <img src="./assets/images/partners/1.png" alt="partners__logo">
+                                    <img src="./assets/images/partners/1.png" class="partners__logo" alt="partners__logo">
                                 </a>
                             </li>
                             <li class="partners__item">
                                 <a href="/" class="partners__link">
-                                    <img src="./assets/images/partners/1.png" alt="partners__logo">
+                                    <img src="./assets/images/partners/1.png" class="partners__logo" alt="partners__logo">
                                 </a>
                             </li>
                             <li class="partners__item">
                                 <a href="/" class="partners__link">
-                                    <img src="./assets/images/partners/1.png" alt="partners__logo">
+                                    <img src="./assets/images/partners/1.png" class="partners__logo" alt="partners__logo">
                                 </a>
                             </li>
                             <li class="partners__item">
                                 <a href="/" class="partners__link">
-                                    <img src="./assets/images/partners/1.png" alt="partners__logo">
+                                    <img src="./assets/images/partners/1.png" class="partners__logo" alt="partners__logo">
                                 </a>
                             </li>
                             <li class="partners__item">
                                 <a href="/" class="partners__link">
-                                    <img src="./assets/images/partners/1.png" alt="partners__logo">
+                                    <img src="./assets/images/partners/1.png" class="partners__logo" alt="partners__logo">
                                 </a>
                             </li>
                             <li class="partners__item">
                                 <a href="/" class="partners__link">
-                                    <img src="./assets/images/partners/1.png" alt="partners__logo">
+                                    <img src="./assets/images/partners/1.png" class="partners__logo" alt="partners__logo">
                                 </a>
                             </li>
                             <li class="partners__item">
                                 <a href="/" class="partners__link">
-                                    <img src="./assets/images/partners/1.png" alt="partners__logo">
+                                    <img src="./assets/images/partners/1.png" class="partners__logo" alt="partners__logo">
                                 </a>
                             </li>
                         </ul>
